--- a/public/input.css
+++ b/public/input.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 .header-background {
-    background: rgb(32,59,19);
+    background: rgb(32, 59, 19);
 
+}
+
+.donate-color {
+    color: rgba(235, 105, 92, 1);
+}
+
+.li-text-color:hover {
+    color: rgba(235, 105, 92, 1);
+    text-decoration: underline;
 }
