--- a/output.css
+++ b/output.css
@@ -916,6 +916,11 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1064,6 +1069,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1127,6 +1137,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1323,6 +1338,10 @@ video {
 
 .donate {
   background-color: rgb(234, 52, 35);
+}
+
+.border-color {
+  border: 1px solid rgb(32, 59, 19);
 }
 
 .placeholder\:text-gray-400::-moz-placeholder {
